--- a/provolley-fr/trunk/android/res/layout/help.xml
+++ b/provolley-fr/trunk/android/res/layout/help.xml
@@ -3,7 +3,6 @@
 android:layout_width="match_parent" 
     android:layout_height="wrap_content" 
     android:orientation="vertical" 
-    android:padding="10dp"
     >
 
 
@@ -12,7 +11,8 @@ android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:src="@drawable/ic_launcher"
 android:layout_gravity="center_horizontal|center_vertical"
-android:layout_margin="8dip"/>
+android:layout_margin="8dip"
+/>
 
 <TextView
     android:id="@+id/application_name_text"
@@ -30,20 +30,26 @@ android:layout_margin="8dip"/>
     android:gravity="center"
     android:text="@string/application_version"
     android:textSize="13sp"
-    android:textStyle="bold" />
+    android:textStyle="bold" 
+    />
 
-<TextView
-    android:id="@+id/help_text"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dip"
-    android:ellipsize="none"
-    android:maxLines="50"
-    android:scrollHorizontally="false"
-    android:text="@string/help_text"
-    android:textColor="#cccccc"
-    android:textSize="11sp"
-    android:textStyle="italic" />
-
+<ScrollView 
+    	android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content" 
+    >
+	<TextView
+	    android:id="@+id/help_text"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:ellipsize="none"
+	    android:maxLines="200"
+	    android:scrollHorizontally="false"
+	    android:text="@string/help_text"
+	    android:textColor="#cccccc"
+	    android:textSize="11sp"
+	    android:textStyle="italic"
+	    android:padding="8dip"
+	     />
+	</ScrollView>
 
 </LinearLayout>
