--- a/provolley-fr/trunk/android/res/layout/license.xml
+++ b/provolley-fr/trunk/android/res/layout/license.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView 
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent" 
+    	android:layout_height="fill_parent" 
+    >
+    
     <RelativeLayout	 
     	android:id="@+id/HelpRelativeLayout" 
     	android:layout_width="fill_parent" 
     	android:layout_height="fill_parent" 
-    	xmlns:android="http://schemas.android.com/apk/res/android"
     	android:orientation="vertical" >
 
 		<TableLayout 
@@ -15,18 +20,17 @@
             	android:layout_width="fill_parent"
             	android:layout_height="wrap_content" 
             	>
-
-	        <TextView 
-	        	android:text="TextView" 
-	        	android:id="@+id/help_text" 
-	        	android:layout_width="fill_parent" 
-	        	android:layout_height="wrap_content"
-	        	android:layout_margin="8dip"
-	        	android:ellipsize="none"
-	        	android:scrollHorizontally="false"
-	        	android:maxLines="40">    
-	        </TextView>
-        </TableRow>
-    </TableLayout>
-    	
-</RelativeLayout>
+		        <TextView 
+		        	android:text="TextView" 
+		        	android:id="@+id/help_text" 
+		        	android:layout_width="fill_parent" 
+		        	android:layout_height="wrap_content"
+		        	android:layout_margin="8dip"
+		        	android:ellipsize="none"
+		        	android:scrollHorizontally="false"
+		        	android:maxLines="2000">    
+		        </TextView>
+        	</TableRow>
+    	</TableLayout>
+	</RelativeLayout>
+</ScrollView>
