- new jerseys - update live2 json
git-svn-id: https://svn.code.sf.net/p/provolley/code@17 7941e115-920d-4f1e-bb98-6c77b12abb24

--- a/provolley-fr/trunk/android/res/layout/live_row.xml
+++ b/provolley-fr/trunk/android/res/layout/live_row.xml
@@ -32,8 +32,7 @@
 	         android:layout_toRightOf="@+id/classement1"
 	         android:layout_below="@+id/equipe1"
 	         android:layout_centerVertical="true"
-	         android:paddingBottom="1dip"
-	         android:src="@drawable/ic_jersey_generic" />
+	         android:paddingBottom="1dip" />
 	 
 	    <ImageView
 	        android:id="@+id/service1"
@@ -100,8 +99,7 @@
 	         android:layout_toLeftOf="@+id/classement2"
 	         android:layout_below="@+id/equipe2"
 	         android:layout_centerVertical="true"
-	         android:paddingBottom="1dip"
-	         android:src="@drawable/ic_jersey_generic" />
+	         android:paddingBottom="1dip" />
 	
 	    <ImageView
 	        android:id="@+id/service2"
