--- a/provolley-fr/trunk/android/res/layout/progtv_activity.xml
+++ b/provolley-fr/trunk/android/res/layout/progtv_activity.xml
@@ -36,7 +36,7 @@
 		        android:gravity="center">
 
 			    <ProgressBar
-			        android:id="@+id/showProgressBar"
+			        android:id="@+id/showProgress"
 					style="@android:style/Widget.ProgressBar.Small"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content" />
