--- a/provolley-fr/trunk/android/res/layout/license.xml
+++ b/provolley-fr/trunk/android/res/layout/license.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
-    	xmlns:android="http://schemas.android.com/apk/res/android"
-    	android:layout_width="fill_parent" 
-    	android:layout_height="fill_parent" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+android:layout_width="match_parent" 
+    android:layout_height="wrap_content" 
+    android:orientation="vertical" 
     >
-    
-    <RelativeLayout	 
-    	android:id="@+id/HelpRelativeLayout" 
+
+	<ScrollView 
     	android:layout_width="fill_parent" 
-    	android:layout_height="fill_parent" 
-    	android:orientation="vertical" >
-
-		<TableLayout 
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:shrinkColumns="*">
-
-        	<TableRow
-            	android:layout_width="fill_parent"
-            	android:layout_height="wrap_content" 
-            	>
-		        <TextView 
-		        	android:text="TextView" 
-		        	android:id="@+id/help_text" 
-		        	android:layout_width="fill_parent" 
-		        	android:layout_height="wrap_content"
-		        	android:layout_margin="8dip"
-		        	android:ellipsize="none"
-		        	android:scrollHorizontally="false"
-		        	android:maxLines="2000">    
-		        </TextView>
-        	</TableRow>
-    	</TableLayout>
-	</RelativeLayout>
-</ScrollView>
+    	android:layout_height="wrap_content" 
+    >
+		<TextView
+		    android:id="@+id/licenseView"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:ellipsize="none"
+		    android:maxLines="2000"
+		    android:scrollHorizontally="false"
+		    android:text="@string/help_text"
+		    android:textColor="#cccccc"
+		    android:textSize="11sp"
+		    android:padding="8dip"
+		     />
+	</ScrollView>
+	
+</LinearLayout>
